Aggiunto del contenuto
Aggiunta pagina sui tipi di layout nella sezione su CSS

--- a/html/template.css
+++ b/html/template.css
@@ -128,7 +128,9 @@ div.centered {
 	margin-left: 30px;
 }
 
-#main p code {
+#main p code,
+#main ul code,
+#main pre code {
 	background-color: rgb(240, 240, 240);
 	font-size: 1.1em;
 }
