--- a/html/template.css
+++ b/html/template.css
@@ -138,12 +138,14 @@ div.centered {
 #main div.appl {
 	background-color: rgb(240, 255, 240);
 	border: 1px solid green;
+	margin: 1em 0;
 	padding: 10px;
 }
 
 #main div.note {
 	background-color: rgb(255, 240, 240);
 	border: 1px solid red;
+	margin: 1em 0;
 	padding: 10px;
 }
 
