Feature: pagina corrente
Logica e template uniti in display.php; menu ora evidenzia pagina corrente

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -123,6 +123,10 @@ div.centered {
 	text-decoration: none;
 }
 
+#menu li >a.active {
+	font-weight: bold;
+}
+
 #main > *:first-child {
 	margin-top: 0;
 }
