--- a/html/css/style.css
+++ b/html/css/style.css
@@ -93,7 +93,12 @@ div.centered {
 	top: calc(var(--header-height) + 40px);
 }
 
+#menu h1:first-child {
+	margin-top: revert;
+}
+
 #menu h1 {
+	margin-top: 40px;
 	padding-left: 20px;
 	font-size: 0.9em;
 }
@@ -105,16 +110,6 @@ div.centered {
 	padding: 0;
 }
 
-#menu li {
-	border-left: 3px solid rgb(180, 180, 180);
-	background-color: rgb(240, 240, 240);
-}
-
-#menu li:hover {
-	border-left-color: rgb(160, 160, 160);
-	background-color: rgb(220, 220, 220);
-}
-
 /* Override dello styling predefinito per i collegamenti */
 #menu li >a {
 	display: block;
@@ -123,8 +118,14 @@ div.centered {
 	text-decoration: none;
 }
 
+#menu li >a:hover {
+	background-color: rgb(250, 250, 250);
+	border-radius: 8px 0 0 8px;
+}
+
 #menu li >a.active {
-	font-weight: bold;
+	background-color: rgb(240, 240, 240);
+	border-radius: 8px 0 0 8px;
 }
 
 #main > *:first-child {
