--- a/html/css/style.css
+++ b/html/css/style.css
@@ -196,3 +196,21 @@ div.centered {
 	background-color: rgb(240, 240, 240);
 	color: var(--menu-text-color);
 }
+
+div.mbox {
+	position: sticky;
+	top: calc(var(--header-height) + 40px);
+	left: 0;
+	border: 1px solid;
+	padding: 20px;
+}
+
+.mbox.success {
+	border-color: green;
+	background-color: rgb(240, 255, 240);
+}
+
+.mbox.failure {
+	border-color: red;
+	background-color: rgb(255, 240, 240);
+}
