--- a/html/css/edit.css
+++ b/html/css/edit.css
@@ -1,24 +1,24 @@
-form {
+#main form {
 	width: 100%;
 	height: 100%;
 }
 
-h1 {
+#main h1 {
 	margin-top: 0;
 }
 
-h1 >input {
+#main h1 >input {
 	width: 100%;
 	font: inherit;
 }
 
-textarea {
+#main textarea {
 	width: 100%;
 	height: 70%;
 	resize: none;
 }
 
-input[type="submit"] {
+#main input[type="submit"] {
 	margin-top: 15px;
 	padding: 10px 20px;
 	font-size: inherit;
