--- a/html/css/install.css
+++ b/html/css/install.css
@@ -13,9 +13,19 @@ form {
 	padding: 20px;
 }
 
+h1:first-child {
+	margin: 0;
+}
+
 h1 {
 	font-size: 1.1em;
-	margin-top: 0;
+	margin-top: 20px;
+	margin-bottom: 0;
+}
+
+p {
+	margin-top: 4px;
+	font-size: 0.9em;
 }
 
 label {
