Uniformata logica di gestione input ($_POST)
Inserita la logica di gestione dell'input all'inizio di ogni pagina (check_input())

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -139,6 +139,7 @@ div.mbox {
 	position: sticky;
 	top: calc(var(--header-height) + 40px);
 	left: 0;
+	margin-bottom: 15px;
 	border: 1px solid;
 	padding: 20px;
 }
