--- a/html/css/style.css
+++ b/html/css/style.css
@@ -45,6 +45,11 @@ div.centered {
 	text-align: right;
 }
 
+#header >.centered >div:last-child >a,
+#footer >.centered >div:last-child >a {
+	color: var(--menu-text-color);
+}
+
 #title {
 	font-size: 1.2em;
 }
@@ -63,10 +68,6 @@ div.centered {
 #title a {
 	color: inherit;
 	text-decoration: none;
-}
-
-#part {
-	color: grey;
 }
 
 #wrapper {
