--- a/html/css/edit.css
+++ b/html/css/edit.css
@@ -9,10 +9,13 @@
 
 #main h1 >input {
 	width: 100%;
+	border-width: 0 0 1px 0;
+	border-color: var(--borders-color);
+	padding: 0 0 5px 0;
 	font: inherit;
 }
 
-#main div {
+#main #edit_fields {
 	height: 100%;
 }
 
@@ -20,6 +23,8 @@
 	width: 100%;
 	height: 70%;
 	resize: none;
+	border: 1px solid var(--borders-color);
+	border-radius: 5px;
 }
 
 #main input[type="submit"] {
