--- a/html/css/edit.css
+++ b/html/css/edit.css
@@ -1,8 +1,3 @@
-#main form {
-	width: 100%;
-	height: 100%;
-}
-
 #main h1 {
 	margin-top: 0;
 }
@@ -15,13 +10,9 @@
 	font: inherit;
 }
 
-#main #edit_fields {
-	height: 100%;
-}
-
 #main textarea {
 	width: 100%;
-	height: 70%;
+	height: 40em;
 	resize: none;
 	border: 1px solid var(--borders-color);
 	border-radius: 5px;
